# V2Ray-Desktop

./: .gitignore  CMakeLists.txt  CMakeSettings.json
native/: AboutPage.h  CMakeLists.txt  ClashApi.h  ClashApp.cpp  ClashApp.h  ClashAppMainWindow.cpp  ClashAppMainWindow.h  ClashAppMainWindow.ui  ClickableLabel.h  DashboardPage.h  FileDownloader.h  LogsPage.h  Page.h  RulesPage.h  RulesPage.ui  ServerItem.h  ServersModel.h  ServersPage.h  SettingsPage.h  SettingsPage.ui  SimpleTableView.h  StatusItemPane.h  StatusItemPane.ui  SubscriptionItem.h  SubscriptionNewWidget.h  main.cpp  native.css  native.qrc  native.rc  resource.h
native/libs/: magic_enum.hpp
native/theme/: dark.css  light.css
src/: V2Ray-Desktop.pro  appproxy.cpp  appproxy.h  networkrequest.cpp  qrcodehelper.cpp
src/ui/: servers.qml  settings.qml
